# oneMKL-for-VM

./: CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: pr.yml
cmake/: FindCompiler.cmake
cmake/mkl/: MKLConfig.cmake  MKLConfigVersion.cmake
docs/: building_the_project_with_dpcpp.rst  create_new_backend.rst
docs/domains/: sparse_linear_algebra.rst
examples/: README.md
examples/blas/run_time_dispatching/level3/: CMakeLists.txt
examples/rng/device/: CMakeLists.txt  uniform.cpp
examples/rng/device/include/: rng_example_helper.hpp
examples/sparse_blas/compile_time_dispatching/: CMakeLists.txt  sparse_blas_spmv_usm_mklcpu_cusparse.cpp
examples/sparse_blas/run_time_dispatching/: CMakeLists.txt  sparse_blas_spmv_usm.cpp
examples/vm/compile_time_dispatching/: CMakeLists.txt  api_demo_mklcpu.cpp  api_demo_mklgpu.cpp  api_demo_vecma.cpp  vm_api_demo.cxx
examples/vm/run_time_dispatching/: CMakeLists.txt  api_demo.cpp
include/oneapi/: mkl.hpp
include/oneapi/math/: blas.hpp  sparse_blas.hpp
include/oneapi/math/blas/detail/: blas_ct_backends.hpp
include/oneapi/math/blas/detail/generic/: blas_ct.hpp  blas_ct.hxx  onemath_blas_generic.hpp
include/oneapi/math/detail/: backends.hpp  backends_table.hpp
include/oneapi/math/rng/device/: distributions.hpp  types.hpp
include/oneapi/math/rng/device/detail/: beta_impl.hpp  distribution_base.hpp  geometric_impl.hpp  uniform_impl.hpp
include/oneapi/math/sparse_blas/: types.hpp
include/oneapi/math/sparse_blas/detail/cusparse/: onemath_sparse_blas_cusparse.hpp  sparse_blas_ct.hpp
include/oneapi/math/sparse_blas/detail/rocsparse/: onemath_sparse_blas_rocsparse.hpp  sparse_blas_ct.hpp
include/oneapi/mkl/: sparse_blas.hpp  types.hpp  vm.hpp
include/oneapi/mkl/detail/: backends.hpp  backends_table.hpp
include/oneapi/mkl/rng/device/detail/: beta_impl.hpp  uniform_impl.hpp
include/oneapi/mkl/sparse_blas/: types.hpp
include/oneapi/mkl/sparse_blas/detail/cusparse/: onemkl_sparse_blas_cusparse.hpp
include/oneapi/mkl/vm/: decls.hpp
include/oneapi/mkl/vm/detail/: vm_rt.hpp
include/oneapi/mkl/vm/detail/mklcpu/: onemkl_vm_mklcpu.hpp  vm_ct.hpp
include/oneapi/mkl/vm/detail/mklgpu/: vm_ct.hpp
include/oneapi/mkl/vm/detail/vecma/: vm_ct.hpp
src/: CMakeLists.txt  config.hpp.in
src/blas/backends/: CMakeLists.txt
src/blas/backends/cublas/: cublas_handle.hpp  cublas_scope_handle.cpp  cublas_scope_handle.hpp  cublas_scope_handle_hipsycl.cpp  cublas_scope_handle_hipsycl.hpp  cublas_task.hpp
src/blas/backends/generic/: CMakeLists.txt  generic_batch.cpp  generic_batch.cxx  generic_common.hpp  generic_level1.cxx  generic_level1_double.cpp  generic_level1_float.cpp  generic_level2.cxx  generic_level2_double.cpp  generic_level2_float.cpp  generic_level3.cxx  generic_level3_bfloat16.cpp  generic_level3_double.cpp  generic_level3_float.cpp  generic_level3_half.cpp  generic_wrappers.cpp
src/blas/backends/mkl_common/: mkl_blas_backend.hpp
src/blas/backends/mklcpu/: CMakeLists.txt
src/blas/backends/mklgpu/: CMakeLists.txt
src/dft/backends/mklgpu/: CMakeLists.txt  backward.cpp  commit.cpp  forward.cpp  mklgpu_helpers.hpp
src/include/: common_onemkl_conversion.hpp  function_table_initializer.hpp
src/lapack/backends/mklcpu/: CMakeLists.txt  mkl_lapack.cpp
src/lapack/backends/mklgpu/: CMakeLists.txt  mkl_lapack.cpp
src/rng/backends/mklcpu/: CMakeLists.txt
src/rng/backends/mklgpu/: CMakeLists.txt  mrg32k3a.cpp  onemkl_distribution_conversion.hpp  philox4x32x10.cpp
src/sparse_blas/: common_op_verification.hpp  generic_container.hpp  macros.hpp  sycl_helper.hpp
src/sparse_blas/backends/: CMakeLists.txt  common_launch_task.hpp
src/sparse_blas/backends/cusparse/: CMakeLists.txt  cusparse_error.hpp  cusparse_global_handle.hpp  cusparse_handles.cpp  cusparse_handles.hpp  cusparse_helper.hpp  cusparse_scope_handle.cpp  cusparse_scope_handle.hpp  cusparse_task.hpp  cusparse_wrappers.cpp
src/sparse_blas/backends/cusparse/operations/: cusparse_spmm.cpp  cusparse_spmv.cpp  cusparse_spsv.cpp
src/sparse_blas/backends/mkl_common/: mkl_dispatch.hpp  mkl_handles.cxx  mkl_handles.hpp  mkl_spmm.cxx  mkl_spmv.cxx  mkl_spsv.cxx
src/sparse_blas/backends/mklcpu/: CMakeLists.txt  mklcpu_handles.cpp  mklcpu_operations.cpp
src/sparse_blas/backends/mklgpu/: CMakeLists.txt  mklgpu_handles.cpp  mklgpu_operations.cpp
src/sparse_blas/backends/rocsparse/: CMakeLists.txt  rocsparse_error.hpp  rocsparse_global_handle.hpp  rocsparse_handles.cpp  rocsparse_handles.hpp  rocsparse_helper.hpp  rocsparse_scope_handle.cpp  rocsparse_scope_handle.hpp  rocsparse_task.hpp  rocsparse_wrappers.cpp
src/sparse_blas/backends/rocsparse/operations/: rocsparse_spmm.cpp  rocsparse_spmv.cpp  rocsparse_spsv.cpp
src/vm/: CMakeLists.txt  function_table.hpp  vm_loader.cpp
src/vm/backends/: CMakeLists.txt
src/vm/backends/mklcpu/: CMakeLists.txt
src/vm/backends/mklgpu/: CMakeLists.txt
src/vm/backends/vecma/: CMakeLists.txt  device_error_handler.hpp  error_handler.hpp  evaluate.cu  evaluate.hpp  iface.cpp  math_inlines.hpp  mode.hpp  scalar.hpp  scalar_args.hpp  service.cpp  service.hpp  status.hpp  strider.hpp  vecma.h  vecma_functions.h  vecma_types.h  vector_arg.hpp  vector_args.hpp  vector_wrapper.hpp  xtypes.hpp
tests/unit_tests/: CMakeLists.txt  main_test.cpp
tests/unit_tests/include/: test_helper.hpp
tests/unit_tests/rng/device/include/: rng_device_test_common.hpp
tests/unit_tests/rng/device/moments/: moments.cpp
tests/unit_tests/sparse_blas/include/: test_common.hpp  test_spmm.hpp  test_spmv.hpp  test_spsv.hpp
tests/unit_tests/sparse_blas/source/: sparse_spmm_buffer.cpp  sparse_spmm_usm.cpp  sparse_spmv_buffer.cpp  sparse_spmv_usm.cpp  sparse_spsv_buffer.cpp  sparse_spsv_usm.cpp
tests/unit_tests/vm/common/: CMakeLists.txt
tests/unit_tests/vm/source/: CMakeLists.txt  basic_span.cpp
